redis/redis-deploy.yaml

apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: redis-master
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: arm32v7/redis
        resources:
          requests:
            cpu: 100m
            memory: 4Mi
          limits:
            cpu: 100m
            memory: 4Mi
        ports:
        - containerPort: 6379
